--- a/assets/scss/custom/_sidebar.scss
+++ b/assets/scss/custom/_sidebar.scss
@@ -145,11 +145,11 @@
 
 	.label {
 		float: left;
-		margin-right: 10px;
+		margin-right: 0px;
 
 		& + span {
 			float: right;
-			width: 82%;
+			width: 80%;
 			display: inline-block;
 		}
 
